Fix overlapping backgroundi on headers (fixes #135)

--- a/TangerineUI.css
+++ b/TangerineUI.css
@@ -461,7 +461,7 @@ body.app-body  {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1;
+    z-index: 0;
     background-color: var(--color-bg);
     background-image: var(--gradient-bg);
 }
